--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,7 +1,23 @@
-.Person{
+.Person {
     margin: 16px auto;
     padding: 16px;
     border: 1px solid #eee;
-    width:60%;
+    width: 60%;
     box-shadow: 0px 2px 3px #ccc
+}
+
+.Person button {
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 2px 3px #eee;
+    background-color: #ee5050;
+    font-size: 12pt;
+    color: white;
+}
+
+@media (max-width: 500px) {
+    .Person button {
+        width: 100%;
+    }
 }
