--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
     text-align: center;
 }
-
-.red {
-    color: red;
+.red{
+    color:red;
 }
 
 .light {
@@ -23,8 +22,8 @@
     background-color: lightgreen;
 }
 .App button.Red{
-  
+    background-color: red;  
 }
-.App button:hover {
-  background-color: lightgreen;
+.App button.Red:hover {
+  background-color: #ff5d5d;
 }
