--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -3,6 +3,7 @@
     padding: 16px;
     border: 1px solid #eee;
     width: 60%;
+  
     box-shadow: 0px 2px 3px #ccc
 }
 
@@ -19,5 +20,8 @@
 @media (max-width: 500px) {
     .Person button {
         width: 100%;
+    }
+    .Person{
+        width: 70%;
     }
 }
