--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -7,7 +7,7 @@
     font-weight: 100;
 }
 
-.Cockpit button {
+.Button {
     border: 1px solid #ccc;
     padding: 10px;
     border-shadow: 1px 2px 3px #eee;
@@ -16,12 +16,12 @@
     color: white;
 }
 
-.Cockpit button:hover {
+.Button:hover {
     background-color: lightgreen;
 }
-.Cockpit button.Red{
+.Button.Red{
     background-color: red;  
 }
-.Cockpit button.Red:hover {
+.Button.Red:hover {
   background-color: #ff5d5d;
 }
